# ChangeLog for dev-util/qdevelop
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qdevelop/ChangeLog,v 1.6 2008/07/23 13:08:32 loki_val Exp $

  23 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/qdevelop-0.25-gcc43.patch, qdevelop-0.25-r1.ebuild:
  Fix for gcc-4.3, bug #222507. Thanks to Dennis Schridde
  <lindevel@gmx.net>.

  09 Apr 2008; Ingmar Vanhassel <ingmar@gentoo.org> qdevelop-0.25-r1.ebuild:
  Make dependencies compatible with split Qt:4.

  31 Jan 2008; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Keyword testing for amd64

  05 Jan 2008; Markus Meier <maekke@gentoo.org> qdevelop-0.25-r1.ebuild:
  x86 stable, bug #202254

*qdevelop-0.25-r1 (14 Dec 2007)

  14 Dec 2007; Markus Ullmann <jokey@gentoo.org> +files/qdevelop.desktop,
  -qdevelop-0.25.ebuild, +qdevelop-0.25-r1.ebuild:
  Add icon and desktop entry for bug #135380 thanks to Marek Hakala

*qdevelop-0.25 (14 Dec 2007)

  14 Dec 2007; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +qdevelop-0.25.ebuild:
  Initial import from sunrise overlay

  11 Dec 2007; Markus Ullmann <jokey@gentoo.org> +qdevelop-0.25:
  Version bump

  11 Dec 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Version bump and SRC_URI fix

  04 Dec 2007; Jakub Moc <jakub@gentoo.org> qdevelop-0.23.ebuild:
  Switch to EAPI-1 and slotted deps

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> qdevelop-0.23.ebuild:
  Use pkg_setup from qt4 eclass for built_with_use check

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> qdevelop-0.23.ebuild:
  Use eqmake4 from qt4 eclass

  01 Jul 2007; Jakub Moc <jakub@gentoo.org> qdevelop-0.23.ebuild:
  Use full path to qmake

  19 Jun 2007; Kalev Lember (kalev) <kalev@smartlink.ee>
  -qdevelop-0.20.ebuild, +qdevelop-0.23.ebuild:
  Version bump. Use sqlite3 USE flag instead of sqlite.

  08 Jun 2007; Ali Polatel (hawking) <polatel@gmail.com>
  qdevelop-0.20.ebuild:
  removed unused inherit versionator
