@@ -1,6 +1,8 @@
 AUX qdevelop-0.25-gcc43.patch 364 RMD160 9bc204ab5c1c3eba0ddbcd597d835a520d7faf9c SHA1 9bc62128d12bb94d15845811c681db609a173095 SHA256 4df90bf945f9f09e781988255d6f471e0e2edbaa228d8ab837cfa9bd722f106f
 AUX qdevelop.desktop 335 RMD160 3b503ed6b08fa16249d1db396fefecb3fbde11c4 SHA1 ae205549fae9ef4fd9098926fa4f309dbe35537a SHA256 e1d31f3df7c0c31bf37e7cd483cc2cda002de7222f3e3d44bb11756fc980b1cd
+DIST qdevelop-0.26.1.tar.gz 1049318 RMD160 66b7f15ffe8c856a52b1aef7b2b69906455af483 SHA1 b237290b146f974221a2d938fc68334e605d2a73 SHA256 f8ce865b6396487756f1a34dcd058203c7490ff1dcc636bfe9fead539a21d2ce
 DIST qdevelop_0.25.zip 1094821 RMD160 b90eef791dd5ac5934fe12ee96073852a4a4aca2 SHA1 1a7186f8836aa8183dbed409ba8f282e8cf34835 SHA256 76a954e01a981066a4d680b831761284bb588a50f7cb18c6cf21680b5c5a2ecd
 EBUILD qdevelop-0.25-r1.ebuild 946 RMD160 f7b0b462c235c46f8742c6ae98dc7f2aeeb44eef SHA1 d544d70a12ce475f3c7a0dc8d13c5be123d34cd8 SHA256 f15e62689bf749f800b88b5271aaf49b94cc6d8df2fd50aa56503f9659eb4cab
-MISC ChangeLog 2080 RMD160 10e6b1ae272302e371b2af5937f449e5dc1c015b SHA1 a2594e5a8a66b61b91b0cc1e6b6ff962190020aa SHA256 c371531eaf0e84fd312d20ef0015da59049bf55d6afa2a6f95f4ee4475a9956f
+EBUILD qdevelop-0.26.1.ebuild 926 RMD160 6553412cd846ccb47b3b00c2ba1dbacc82db901b SHA1 37bbcd34cada7e9dacd6d367c82a490f94792d65 SHA256 5d9a76048b7ca3b96fe01e80c06ab4e7e42db9c31a35594d2a41fdbe98f03519
+MISC ChangeLog 2244 RMD160 451aaadbe25e36394b37eda326e5cb7c99be8af3 SHA1 e064afc0b48f17a2e0a7f0abb8558410dc74cda2 SHA256 3289d3c45129017785b22197f0b500043e55dbcb5c588d73e706c64d2bc3a596
 MISC metadata.xml 250 RMD160 6c99386d30f0a994b5fdd33e9cb4c4834bf0b065 SHA1 65a7f9fe1611296a8097dae74e813da9443afe54 SHA256 25978734e7451145c61e67904310a3024287853960a33fabbe3b57cb4f5c1202
