@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/qdevelop
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qdevelop/ChangeLog,v 1.6 2008/07/23 13:08:32 loki_val Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qdevelop/ChangeLog,v 1.7 2009/01/31 21:45:26 jokey Exp $
+
+*qdevelop-0.26.1 (31 Jan 2009)
+
+  31 Jan 2009; <jokey@gentoo.org> +qdevelop-0.26.1.ebuild:
+  Version bump wrt bug 250618 thanks to Markos Chandras for the new ebuild
 
   23 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
   +files/qdevelop-0.25-gcc43.patch, qdevelop-0.25-r1.ebuild:
